src/objects/Comparison__c.object
<CustomObject>
    <fields>
        <fullName>IndexOne__c</fullName>
        <label>IndexOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexTwo__c</fullName>
        <label>IndexTwo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>result</label>
        <type>TextArea</type>
    </fields>
    <label>Comparison</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Valera Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comparisons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>